# 20232-team-14

./: .gitignore  CMakeLists.txt  README.md  database.sql
src/: main.cpp
src/controller/: Controller.cpp  Controller.h
src/exception/: abortFunctionException.cpp  abortFunctionException.h
src/exceptions/: abortFunctionException.cpp  abortFunctionException.h  deLoreanException.cpp  deLoreanException.h  steinsGateException.cpp  steinsGateException.h
src/model/: Caminhao.cpp  Caminhao.h  Carro.cpp  Carro.h  Model.cpp  Model.h  Moto.cpp  Moto.h  SqliteHook.cpp  SqliteHook.h  Veiculo.cpp  Veiculo.h
src/view/: Cli.cpp  Cli.h
